--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,41 @@
-# System Files
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE/Editor folders
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional: Build output
+dist/
+build/
+out/
+
+# Cache directories
+.cache/
+.temp/
 
 # Python
 __pycache__/
@@ -17,28 +45,13 @@ venv/
 env/
 
 # Node
-node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
 
-# Environment variables
-.env
-.env.local
-.env.*.local
-
 # Logs
 logs
 *.log
-
-# Build output
-dist/
-build/
-out/
-
-# Cache
-.cache/
-.npm/
 
 # Testing
 coverage/
